[project]
name = "mygmm"
version = "0.1.0"
description = "My own implementation of the GMM estimator for educational purposes"
authors = [{ name = "Stanislav Khrapov", email = "khrapovs@gmail.com" }]
readme = "README.md"
requires-python = ">=3.14"
dependencies = []

[build-system]
requires = ["uv_build>=0.11.7,<0.12"]
build-backend = "uv_build"
