[project]
name = "mygmm"
version = "0.1.0"
description = "My own implementation of the GMM estimator for educational purposes"
authors = [{ name = "Stanislav Khrapov", email = "khrapovs@gmail.com" }]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "numdifftools>=0.9.42",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "scipy>=1.17.1",
    "scipy-stubs~=1.17.1",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]

[build-system]
requires = ["uv_build>=0.11.7,<0.12"]
build-backend = "uv_build"
