[project]
name = "mygmm"
description = "My own implementation of the GMM estimator for educational purposes"
authors = [{ name = "Stanislav Khrapov", email = "khrapovs@gmail.com" }]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "numdifftools>=0.9.42",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "scipy>=1.17.1",
    "statsmodels>=0.14.6",
]
dynamic = ["version"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "scipy-stubs~=1.17.1",
]

[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.uv-dynamic-versioning]
fallback-version = "0.0.0"

[tool.commitizen]
version_scheme = "semver"
version_provider = "scm"
update_changelog_on_bump = true
